feat: add showcase

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
   </head>
   <body>
     <div class="showcase-container">
+      <div class="showcase-container-content">
         <header class="header-container">
-          <a href="#"><img src="imgs/agency-logo.svg" alt="Agency logo" class="agency-logo" /></a>
+          <a href="#"
+            ><img
+              src="imgs/agency-logo.svg"
+              alt="Agency logo"
+              class="agency-logo"
+          /></a>
           <nav class="navbar-container">
             <ul>
               <li><a href="#">Home</a></li>
@@ -32,8 +38,28 @@
           </nav>
           <button class="navbar-button">Sign Up</button>
         </header>
-
+        <div class="showcase-content">
+          <h2>Marketing is The Key of Business Sucess.</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been
+          </p>
+          <div class="showcase-buttons">
+            <button>Get Started <i class="fa-solid fa-arrow-right"></i></button>
+            <button id="video"><i class="fa-solid fa-play"></i></button>
+            <label for="video">Watch Our Video</label>
+            <div>
+              <span>Our creative Team</span
+              ><img src="imgs/avatar.svg" alt="Team Avatares" />
+            </div>
+          </div>
+        </div>
+        <img src="imgs/employee.svg" alt="Business-Man" />
+      </div>
     </div>
-    <div class="main-container"></div>
+    <script
+      src="https://kit.fontawesome.com/c5de41ae4a.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
