feat: add boost business section

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
           <h2>Take Your Online marketing to the next level.</h2>
           <div class="next-level-items">
             <div class="next-level-item">
-              <i class="fa-solid fa-calendar-day fa-2xl scheduling"></i>
+              <i class="fa-solid fa-calendar-day fa-2xl scheduling card-icon"></i>
               <div class="next-level-item-text">
-                <span>Direct Scheduling</span>
+                <span class="title">Direct Scheduling</span>
                 <p>
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry.
@@ -94,9 +94,9 @@
               </div>
             </div>
             <div class="next-level-item">
-              <i class="fa-solid fa-bell fa-2xl reminder"></i>
+              <i class="fa-solid fa-bell fa-2xl reminder card-icon"></i>
               <div class="next-level-item-text">
-                <span>Reminders</span>
+                <span class="title">Reminders</span>
                 <p>
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry.
@@ -104,9 +104,9 @@
               </div>
             </div>
             <div class="next-level-item">
-              <i class="fa-solid fa-bag-shopping fa-2xl shop"></i>
+              <i class="fa-solid fa-bag-shopping fa-2xl shop card-icon"></i>
               <div class="next-level-item-text">
-                <span>Shop-Grid</span>
+                <span class="title">Shop-Grid</span>
                 <p>
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry.
@@ -120,6 +120,30 @@
             src="imgs/business-3d-businessman-searching-for-an-answer.png"
             alt=""
           />
+        </div>
+      </div>
+      <div class="boost-business-container">
+        <h2>Want you to Boost your Business?</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="boost-business-cards">
+          <div class="boost-business-card">
+            <i class="fa-solid fa-calendar-day fa-2xl card-icon scheduling"></i>
+            <span class="title">Scheduling</span>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="boost-business-card">
+            <i class="fa-solid fa-comment-dollar fa-2xl card-icon shop"></i>
+            <span class="title">Increase convertion</span>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
+            <a href="#">Read more</a>
+          </div>
+          <div class="boost-business-card">
+            <i class="fa-solid fa-chart-pie fa-2xl card-icon reminder"></i>
+            <span class="title">Analytics</span>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
+            <a href="#">Read more</a>
+          </div>
         </div>
       </div>
     </div>
