--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
           <h2>Take Your Online marketing to the next level.</h2>
           <div class="next-level-items">
             <div class="next-level-item">
-              <i class="fa-solid fa-calendar-day fa-2xl scheduling card-icon"></i>
+              <i
+                class="fa-solid fa-calendar-day fa-2xl scheduling card-icon"
+              ></i>
               <div class="next-level-item-text">
                 <span class="title">Direct Scheduling</span>
                 <p>
@@ -124,27 +126,63 @@
       </div>
       <div class="boost-business-container">
         <h2>Want you to Boost your Business?</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry.
+        </p>
         <div class="boost-business-cards">
           <div class="boost-business-card">
             <i class="fa-solid fa-calendar-day fa-2xl card-icon scheduling"></i>
             <span class="title">Scheduling</span>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry
+            </p>
             <a href="#">Read more</a>
           </div>
           <div class="boost-business-card">
             <i class="fa-solid fa-comment-dollar fa-2xl card-icon shop"></i>
             <span class="title">Increase convertion</span>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry
+            </p>
             <a href="#">Read more</a>
           </div>
           <div class="boost-business-card">
             <i class="fa-solid fa-chart-pie fa-2xl card-icon reminder"></i>
             <span class="title">Analytics</span>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry
+            </p>
             <a href="#">Read more</a>
           </div>
         </div>
+      </div>
+      <div class="solutions-container">
+        <div class="solutions-content">
+          <h2>Unique Solutions for Your Business</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text
+            ever since the 1500s, when an unknown printer took a galley.
+          </p>
+          <div class="solutions-cards">
+            <div class="total-clients">
+              <span>50+</span>
+              <p>Total Client</p>
+            </div>
+            <div class="total-projects">
+              <span>100+</span>
+              <p>Project Done</p>
+            </div>
+          </div>
+        </div>
+        <img
+          src="imgs/recruiter-found-an-employee.svg"
+          alt="Recruiter found an employee"
+        />
       </div>
     </div>
     <script
