feat: add testemonial cards

--- a/index.html
+++ b/index.html
@@ -184,6 +184,51 @@
           alt="Recruiter found an employee"
         />
       </div>
+      <div class="testemonials-container">
+        <span class="testemonials-container-title">TESTEMONIALS</span>
+        <h2>What The People Thinks About Us</h2>
+        <div class="testemonials-cards">
+          <div class="testemonial-card">
+            <div class="deponent-informations">
+              <img src="imgs/user-avatar.svg" alt="Jonh Doe" />
+              <div class="informations-text">
+                <span class="deponent-name">John Doe</span>
+                <p>One Year With Us</p>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consec adipis. Cursus ultricies sit
+              sit
+            </p>
+          </div>
+          <div class="testemonial-card">
+            <div class="deponent-informations">
+              <img src="imgs/user-avatar.svg" alt="Jonh Doe" />
+              <div class="informations-text">
+                <span class="deponent-name">John Doe</span>
+                <p>One Year With Us</p>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consec adipis. Cursus ultricies sit
+              sit
+            </p>
+          </div>
+          <div class="testemonial-card">
+            <div class="deponent-informations">
+              <img src="imgs/user-avatar.svg" alt="Jonh Doe" />
+              <div class="informations-text">
+                <span class="deponent-name">John Doe</span>
+                <p>One Year With Us</p>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consec adipis. Cursus ultricies sit
+              sit
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://kit.fontawesome.com/c5de41ae4a.js"
