feat: add news section

--- a/index.html
+++ b/index.html
@@ -229,6 +229,57 @@
           </div>
         </div>
       </div>
+      <div class="news-container">
+        <h2>Latest News</h2>
+        <p>
+          There are many variations of passages of lorem lpsum available, but
+          the majority have suffered alteraction
+        </p>
+        <div class="news-cards">
+          <div class="news-card">
+            <img src="imgs/unsplash_8YG31Xn4dSw.png" alt="" />
+            <div class="news-publish-information">
+              <div class="news-user">
+                <i class="fa-solid fa-circle-user fa-xl"></i>
+                <span>John Doe</span>
+              </div>
+              <div class="news-date">
+                <i class="fa-solid fa-calendar-day fa-xl"></i>
+                <span>06 March 2022</span>
+              </div>
+            </div>
+            <span class="title">Discover cennect with great local business in your</span>
+          </div>
+          <div class="news-card">
+            <img src="imgs/unsplash_diNfwACx8bk.png" alt="" />
+            <div class="news-publish-information">
+              <div class="news-user">
+                <i class="fa-solid fa-circle-user fa-xl"></i>
+                <span>John Doe</span>
+              </div>
+              <div class="news-date">
+                <i class="fa-solid fa-calendar-day fa-xl"></i>
+                <span>06 March 2022</span>
+              </div>
+            </div>
+            <span class="title">Discover cennect with great local business in your</span>
+          </div>
+          <div class="news-card">
+            <img src="imgs/unsplash_2FPjlAyMQTA.png" alt="" />
+            <div class="news-publish-information">
+              <div class="news-user">
+                <i class="fa-solid fa-circle-user fa-xl"></i>
+                <span>John Doe</span>
+              </div>
+              <div class="news-date">
+                <i class="fa-solid fa-calendar-day fa-xl"></i>
+                <span>06 March 2022</span>
+              </div>
+            </div>
+            <span class="title">Discover cennect with great local business in your</span>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://kit.fontawesome.com/c5de41ae4a.js"
