feat: add newsletter section and form

--- a/index.html
+++ b/index.html
@@ -280,6 +280,15 @@
           </div>
         </div>
       </div>
+      <div class="newsletter-container">
+        <span>Join Our Comunity</span>
+        <h2>Subscribe To Our Newsletter</h2>
+        <p>There are many variations of passages of lorem lpsum available, but the majority have suffered alteraction</p>
+        <form class="newsletter-form">
+          <input type="email" placeholder="Enter your email...">
+          <button>Get Started</button>
+        </form>
+      </div>
     </div>
     <script
       src="https://kit.fontawesome.com/c5de41ae4a.js"
