--- a/index.html
+++ b/index.html
@@ -248,7 +248,9 @@
                 <span>06 March 2022</span>
               </div>
             </div>
-            <span class="title">Discover cennect with great local business in your</span>
+            <span class="title"
+              >Discover cennect with great local business in your</span
+            >
           </div>
           <div class="news-card">
             <img src="imgs/unsplash_diNfwACx8bk.png" alt="" />
@@ -262,7 +264,9 @@
                 <span>06 March 2022</span>
               </div>
             </div>
-            <span class="title">Discover cennect with great local business in your</span>
+            <span class="title"
+              >Discover cennect with great local business in your</span
+            >
           </div>
           <div class="news-card">
             <img src="imgs/unsplash_2FPjlAyMQTA.png" alt="" />
@@ -276,20 +280,73 @@
                 <span>06 March 2022</span>
               </div>
             </div>
-            <span class="title">Discover cennect with great local business in your</span>
+            <span class="title"
+              >Discover cennect with great local business in your</span
+            >
           </div>
         </div>
       </div>
       <div class="newsletter-container">
         <span>Join Our Comunity</span>
         <h2>Subscribe To Our Newsletter</h2>
-        <p>There are many variations of passages of lorem lpsum available, but the majority have suffered alteraction</p>
+        <p>
+          There are many variations of passages of lorem lpsum available, but
+          the majority have suffered alteraction
+        </p>
         <form class="newsletter-form">
-          <input type="email" placeholder="Enter your email...">
+          <input type="email" placeholder="Enter your email..." />
           <button>Get Started</button>
         </form>
       </div>
     </div>
+    <footer class="footer-container">
+      <div class="footer-content">
+        <div class="footer-socials">
+          <img src="imgs/agency-white-logo.svg" alt="Agency logo" class="title"/>
+          <p>
+            There are many variations of passages of lorem lpsum available, but
+            the majority have suffered alteraction
+          </p>
+          <div class="socials-links">
+            <button class="social-btn">
+              <i class="fa-brands fa-linkedin-in fa-xl"></i>
+            </button>
+            <button class="social-btn">
+              <i class="fa-brands fa-facebook-f fa-xl"></i>
+            </button>
+            <button class="social-btn">
+              <i class="fa-brands fa-x-twitter fa-xl"></i>
+            </button>
+          </div>
+        </div>
+        <div class="footer-products">
+          <span class="title">Product</span>
+          <ul>
+            <li><a href="#">Employee database</a></li>
+            <li><a href="#">Payroll</a></li>
+            <li><a href="#">Absences</a></li>
+            <li><a href="#">Time Tracking</a></li>
+          </ul>
+        </div>
+        <div class="footer-information">
+          <span class="title">Information</span>
+          <ul>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Payroll</a></li>
+          </ul>
+        </div>
+        <div class="footer-company-links">
+          <span class="title">Company</span>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/c5de41ae4a.js"
       crossorigin="anonymous"
