fix: formated index with prettier

--- a/index.html
+++ b/index.html
@@ -302,7 +302,11 @@
     <footer class="footer-container">
       <div class="footer-content">
         <div class="footer-socials">
-          <img src="imgs/agency-white-logo.svg" alt="Agency logo" class="title"/>
+          <img
+            src="imgs/agency-white-logo.svg"
+            alt="Agency logo"
+            class="title"
+          />
           <p>
             There are many variations of passages of lorem lpsum available, but
             the majority have suffered alteraction
